--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background-color: #a0a815;;
+      background: rgb(255,255,240);
+      background: linear-gradient(90deg, rgba(255,255,240,1) 0%, rgba(255,255,240,1) 5%, rgba(199,181,163,1) 38%, rgba(85,205,225,1) 100%);
     }
     h1 {
       color: #333;
@@ -33,7 +34,7 @@ body {
     }
     .countd{
         margin: 50px;
-        background-color: #ecf478;
+        background-color:#6ddaf0;
         padding: 20px;
         border-radius: 10px; 
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);    
